--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+:root {
+    --light-cyan: hsl(193, 38%, 86%);
+    --neon-green: hsl(150, 100%, 66%);
+    --grayish-blue: hsl(218, 20%, 24%);
+    --dark-grayish-blue: hsl(220, 22%, 16%);
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -5,8 +12,22 @@
 }
 
 body {
-    background: hsl(220, 36%, 20%);
+    background: var(--dark-grayish-blue);
 
+}
+
+@media only screen and (max-width: 375px){
+    .advice-box {
+        width: 90% !important;
+    }
+
+    .divider-desktop {
+        visibility: hidden;
+    }
+
+    .divider-mobile {
+        visibility: visible;
+    }
 }
 
 .container {
@@ -19,12 +40,13 @@ body {
 
 .advice-box {
     width: 50%;
+    min-width: 175px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     border-radius: 5px;
-    background-color: hsl(218, 33%, 29%);
+    background-color: var(--grayish-blue);
     font-family: 'Manrope';
     transition: ease all 0.3s;
 }
@@ -34,7 +56,7 @@ body {
     font-size: 4px;
     letter-spacing: 2px;
     text-transform: uppercase;
-    color: hsl(150, 100%, 66%);
+    color: var(--neon-green);
 }
 
 .advice-text-container {
@@ -42,11 +64,16 @@ body {
     text-align: center;
     width: 66%;
     font-size: 14px;
-    color: hsl(193, 38%, 86%);
+    color: var(--light-cyan);
 }
 
 .divider-desktop {
     width: 66%;
+    visibility: visible;
+}
+
+.divider-mobile {
+    visibility: hidden;
 }
 
 .button {
@@ -60,12 +87,12 @@ body {
     cursor: pointer;
     transition: 0.3s ease all;
     border-radius: 50%;
-    background: hsl(150, 100%, 66%);
+    background: var(--neon-green);
 }
 
 .button:hover{
-    -webkit-box-shadow: 0px 0px 20px 0px hsl(150, 100%, 66%);
-    box-shadow: 0px 0px 20px 0px hsl(150, 100%, 66%);
+    -webkit-box-shadow: 0px 0px 20px 0px var(--neon-green);
+    box-shadow: 0px 0px 20px 0px var(--neon-green);
 }
 
 .attribution{
