--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,13 @@
 }
 
 body {
+    display: grid;
+    min-height: 100vh;
+    padding: 1rem;
     background: var(--dark-grayish-blue);
-    font-family: 'Manrope';
+    font-family: 'Manrope', sans-serif;
+    font-size: 1rem;
+    text-align: center;
 }
 
 @media only screen and (max-width: 375px){
@@ -39,19 +44,20 @@ body {
 }
 
 .advice-box {
-    width: 50%;
-    min-width: 175px;
+    width: 70%;
+    min-width: 340px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border-radius: 5px;
+    border-radius: 10px;
     background-color: var(--grayish-blue);
     transition: ease all 0.3s;
+    font-size: 1rem;
 }
 
 .advice-tag {
-    padding: 20px 0px;
+    padding: 3rem 0px;
     font-size: 14px;
     letter-spacing: 2px;
     text-transform: uppercase;
@@ -59,10 +65,10 @@ body {
 }
 
 .advice-text-container {
-    padding-bottom: 20px;
+    padding-bottom: 3rem;
     text-align: center;
     width: 66%;
-    font-size: 28px;
+    font-size: 3rem;
     color: var(--light-cyan);
 }
 
@@ -80,9 +86,9 @@ body {
     position: relative;
     justify-content: center;
     align-items: center;
-    top: 10px;
-    width: 20px;
-    height: 20px;
+    top: 25px;
+    width: 50px;
+    height: 50px;
     cursor: pointer;
     transition: 0.3s ease all;
     border-radius: 50%;
@@ -95,6 +101,6 @@ body {
 }
 
 .attribution {
-    font-size: 8px;
-    color: var(--light-cyan)
+    font-size: 16px;
+    color: var(--light-cyan);
 }
